<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="@dimen/size_68"
        android:orientation="vertical"
        android:padding="@dimen/margin_15">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_add_ingredient"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_18"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"
        android:layout_marginRight="@dimen/margin_8"
        android:adjustViewBounds="true"
        android:padding="4dp"
        app:srcCompat="@drawable/ic_close_black_24dp" />

    <LinearLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_title"
        android:orientation="horizontal"
        android:weightSum="1">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editText_ingredient"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_50"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginLeft="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_12"
            android:layout_weight="0.6"
            android:background="@drawable/background_rounded_card_white"
            android:hint="@string/text_ingredient"
            android:imeOptions="actionNext"
            android:padding="@dimen/padding_8" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editText_amount"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_50"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginLeft="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_12"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_marginRight="@dimen/margin_16"
            android:layout_weight="0.4"
            android:background="@drawable/background_rounded_card_white"
            android:hint="@string/text_ingredient_amount"
            android:imeOptions="actionGo"
            android:padding="@dimen/padding_8" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/margin_30"
        android:layout_marginLeft="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_30"
        android:layout_marginRight="@dimen/margin_30"
        android:layout_marginBottom="@dimen/margin_20"
        android:background="@drawable/background_button_general"
        android:enabled="false"
        android:minWidth="@dimen/size_100"
        android:text="@string/text_add_action"
        android:textColor="@color/white"
        android:visibility="visible" />

</RelativeLayout>