<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_12"
        android:text="@string/app_name"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColor="@color/black"
        android:textSize="@dimen/text_24"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editText_search"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50"
        android:layout_below="@id/textView_title"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_16"
        android:background="@drawable/background_rounded_card_white"
        android:drawableStart="@drawable/ic_search"
        android:drawableLeft="@drawable/ic_search"
        android:drawablePadding="@dimen/padding_8"
        android:hint="@string/text_hint_search_recipe"
        android:imeOptions="actionGo"
        android:padding="@dimen/padding_8" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/editText_search"
        android:fillViewport="true">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/margin_18"
            android:padding="@dimen/padding_16"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/margin_14"
        android:background="@drawable/background_button_general"
        android:minWidth="@dimen/size_120"
        android:text="@string/text_add_recipe"
        android:textColor="@color/white" />
</RelativeLayout>