<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="@dimen/size_68"
        android:orientation="vertical"
        android:padding="@dimen/margin_15">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/text_18"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:text="@string/text_search_image" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"
        android:layout_marginRight="@dimen/margin_8"
        android:adjustViewBounds="true"
        android:padding="4dp"
        app:srcCompat="@drawable/ic_close_black_24dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editText_search"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_12"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/size_50"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_16"
        android:padding="@dimen/padding_8"
        android:hint="@string/text_enter_image_url"
        android:background="@drawable/background_rounded_card_white"
        android:layout_below="@id/layout_title"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/size_100"
        android:layout_centerInParent="true"
        android:background="@drawable/background_button_general"
        android:layout_below="@id/editText_search"
        android:layout_marginStart="@dimen/margin_30"
        android:layout_marginLeft="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_30"
        android:layout_marginRight="@dimen/margin_30"
        android:layout_marginBottom="@dimen/margin_20"
        android:visibility="visible"
        android:enabled="false"
        android:textColor="@color/white"
        android:text="@string/text_search" />

</RelativeLayout>