<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/text_add_recipe"
            android:textColor="@color/black"
            android:textSize="@dimen/text_24"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:padding="@dimen/padding_8"
            android:text="@string/text_save_action"
            android:textColor="@drawable/button_save_text_state"
            android:textSize="@dimen/text_16"
            app:layout_constraintBottom_toBottomOf="@+id/textView_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView_recipe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:includeFontPadding="false"
            android:text="@string/text_name_label"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView_title" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editText_recipe_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="start"
            android:includeFontPadding="false"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView_recipe_name"
            tools:text="Espresso" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView_recipe_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/text_category_label"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/editText_recipe_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editText_recipe_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="start"
            android:includeFontPadding="false"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView_recipe_category"
            tools:text="Coffee" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView_recipe"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/grey"
            android:src="@mipmap/background_place_holder"
            app:layout_constraintBottom_toBottomOf="@+id/editText_recipe_category"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView_recipe_name" />

        <View
            android:id="@+id/view_background"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_rounded_top"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/layout_switch" />

        <LinearLayout
            android:id="@+id/layout_switch"
            android:layout_width="@dimen/size_200"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_recipe_category">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView_ingredient"
                style="@style/ButtonPagerStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/background_button_left_state"
                android:enabled="false"
                android:text="@string/text_ingredient" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView_step"
                style="@style/ButtonPagerStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/background_button_right_state"
                android:enabled="true"
                android:text="@string/text_steps" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/text_ingredient"
            android:textColor="@color/black"
            android:textSize="@dimen/text_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_switch" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/text_ingredient_amount"
            android:textColor="@color/black"
            android:textSize="@dimen/text_16"
            app:layout_constraintStart_toStartOf="@+id/guideline_2"
            app:layout_constraintTop_toBottomOf="@+id/layout_switch" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/background_rounded_corner"
            android:gravity="center"
            android:minWidth="@dimen/size_70"
            android:padding="@dimen/padding_4"
            android:text="@string/text_add_action"
            android:textColor="@color/white"
            android:textSize="@dimen/text_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_switch" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_content"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:padding="@dimen/padding_8"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_description"
            tools:listitem="@layout/simple_recyclerview_item" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>